--- a/style.css
+++ b/style.css
@@ -172,3 +172,34 @@ section h2, section h3 {
 .section p {
     color: #666;
 }
+
+footer {
+    text-align: center;
+    padding: 2px;
+    background: #000000;
+    color: #fff;
+    font-size: 0.9em;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+}
+
+.btn {
+    margin-top: 10px;
+    display: block;
+    width: 300px;
+    height: 50px;
+    border: 1px solid #000;
+    border-radius: 10px;
+    text-align: center;
+    line-height: 50px;
+    text-decoration: none;
+    color: #000;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.btn:hover {
+    background: #000;
+    color: #fff;
+}
