--- a/style.css
+++ b/style.css
@@ -199,6 +199,18 @@ footer {
     font-weight: bold;
 }
 
+/*Телефон*/
+@media (max-width: 768px) {
+    body {
+      font-size: 14px;
+      padding: 10px;
+    }
+    .container {
+      flex-direction: column;
+      align-items: center;
+    }
+  }
+  
 .btn:hover {
     background: #000;
     color: #fff;
